# rusty-sword

./: .env  .gitignore  Cargo.toml  README.md  build.rs  foundry.toml
artifacts/HeroCore.sol/: HeroCore.json
artifacts/MeditationCircle.sol/: MeditationCircle.json
artifacts/QuestCore.sol/: QuestCoreV2_2.json
config/: db.toml  hero_names.toml
config/dfkchain/: mainnet.toml
contracts/: HeroCore.sol  MeditationCircle.sol  QuestCore.sol
db/migrations/: 0000_initial.sql
db/query/: insert_hero.sql
schema/: schema.sql
src/: command_line.rs  config.rs  contracts.rs  database.rs  genes.rs  hero.rs  level_up.rs  lib.rs  main.rs  quests.rs  util.rs
